--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -193,5 +193,8 @@ ga('send', 'pageview');
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 {% endif %}
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
+     crossorigin="anonymous"></script>
+
 </body>
 </html>
