--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -195,6 +195,9 @@ ga('send', 'pageview');
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
      crossorigin="anonymous"></script>
+	 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
+     crossorigin="anonymous"></script>
 
 </body>
 </html>
