--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -179,3 +179,6 @@ https://search.google.com/structured-data/testing-tool/u/0/
 }
 </script>
 {% endif %}
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
+     crossorigin="anonymous"></script>
