--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -200,6 +200,18 @@ ga('send', 'pageview');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
      crossorigin="anonymous"></script>
 	 
+	 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-ef-5l+wg-fx-1uj"
+     data-ad-client="ca-pub-6773266203964671"
+     data-ad-slot="5927791476"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	 
 
 </body>
 </html>
