--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,19 @@ post_class: post-template
                     </div>
                 </div>
                 {% endif %}
+				
+				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6773266203964671"
+     crossorigin="anonymous"></script>
+<!-- adunit -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6773266203964671"
+     data-ad-slot="9594793491"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
                 <!-- Post Title -->
                 <h1 class="posttitle">{{ page.title }}</h1>
