--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@ post_class: post-template
         <!-- Post Share -->
         <div class="col-md-2 pl-0">
             {% include share.html %}
+			{% seo %}
         </div>
 
         <!-- Post -->
